# CodexVoice

./: AGENTS.md  CodexVoice-PRD.md  README.md
CodexVoice/: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
CodexVoice/docs/: overlay-ui-implementation-brief.md  streaming-transcription-design.md  waveform-motion-design.md
CodexVoice/resources/: app_icon.icns
CodexVoice/src/codexvoice/: __init__.py  __main__.py  app.py  config.py  hotkey.py  logging_setup.py  permissions.py  runtime_lock.py  types.py
CodexVoice/src/codexvoice/audio/: __init__.py  recorder.py  vad.py
CodexVoice/src/codexvoice/injection/: __init__.py  clipboard.py
CodexVoice/src/codexvoice/transcriber/: __init__.py  base.py  corrections.py  fake.py  faster_whisper_engine.py  normalize.py
CodexVoice/src/codexvoice/ui/: __init__.py  overlay.py  status_item.py
CodexVoice/tests/: test_app.py  test_cli.py  test_config.py  test_corrections.py  test_hotkey.py  test_injection.py  test_normalize.py  test_overlay.py  test_recorder.py  test_runtime_lock.py  test_vad_rules.py
